--- a/src/index.html
+++ b/src/index.html
@@ -234,6 +234,6 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-	<script src="js/index.js"></script>
+	<script src="js/bundle.js"></script>
 </body>
 </html>
